--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +25,7 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-redux": "^9.2.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
