--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
