--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.544.0",
+    "mongoose": "^8.19.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
