--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.89.0",
     "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.19.1",
     "next": "15.5.3",
@@ -44,6 +46,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
