--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cmdk": "^1.1.1",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.19.1",
     "next": "15.5.3",
